--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Professional Website Hub</title>
+    <title> yash Websites Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon -->
 </head>
 <body>
     <header>
         <div class="overlay">
-            <h1>Welcome to My Professional Website Hub</h1>
+            <h1>Welcome to My Websites Hub</h1>
             <p>Explore my curated collection of websites:</p>
         </div>
     </header>
