--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="website-item visible">
                 <a href="https://yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
                     <h3>Official youtube channel</h3>
-                    <img src="image1.jpg" alt="Website 1" class="website-image">
+                    <img src="1.webp" alt="Website 1" class="website-image">
                     <p>https://www.example1.com</p>
                 </a>
             </div>
