--- a/index.html
+++ b/index.html
@@ -22,14 +22,24 @@
             <div class="website-item visible">
                 <a href="https://yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
                     <h3>Official youtube channel</h3>
-                    <img src="1.webp" alt="Website 1" class="website-image">
                     <p>https://www.example1.com</p>
                 </a>
             </div>
             <div class="website-item visible">
                 <a href="https://www.example2.com" target="_blank" class="website-link">
                     <h3>Website 2</h3>
-                    <img src="image2.jpg" alt="Website 2" class="website-image">
+                    <p>https://www.example2.com</p>
+                </a>
+            </div>
+            <div class="website-item visible">
+                <a href="https://www.example2.com" target="_blank" class="website-link">
+                    <h3>Website 3</h3>
+                    <p>https://www.example2.com</p>
+                </a>
+            </div>
+            <div class="website-item visible">
+                <a href="https://www.example2.com" target="_blank" class="website-link">
+                    <h3>Website 4</h3>
                     <p>https://www.example2.com</p>
                 </a>
             </div>
