--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Yash websites Hub</title>
+    <title> Yash Websites Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Favicon.ico" type="image/x-icon"> <!-- Favicon -->
 </head>
@@ -18,42 +18,64 @@
 
     <main>
         <div class="website-links">
-            <!-- Example Website Links -->
-            <div class="website-item visible">
-                <a href="https://yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
-                    <h3>Official youtube channel</h3>
-                    <p>https://www.example1.com</p>
+            <!-- Website 1 -->
+            <div class="website-item">
+                <h3>Official youtube channel</h3>
+                <hr>
+                <a href="yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
+                    <div class="website-image-container">
+                        <img src="y.jpg" alt="Website 1" class="website-image">
+                    </div>
                 </a>
+                <div class="website-content">
+                    <p>Content for Example Website 1 goes here. This can be any details about the website.</p>
+                </div>
             </div>
-            <div class="website-item visible">
+
+            <!-- Website 2 -->
+            <div class="website-item">
+                <h3>Example Website 2</h3>
+                <hr>
                 <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <h3>Website 2</h3>
-                    <p>https://www.example2.com</p>
+                    <div class="website-image-container">
+                        <img src="y.jpg" alt="Website 2" class="website-image">
+                    </div>
                 </a>
-            </div>
-            <div class="website-item visible">
+                <div class="website-content">
+                    <p>Content for Example Website 2 goes here. This can be any details about the website.</p>
+                </div>
+<!-- Website 3 -->
+            <div class="website-item">
+                <h3>Example Website 3</h3>
+                <hr>
                 <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <h3>Website 3</h3>
-                    <p>https://www.example2.com</p>
+                    <div class="website-image-container">
+                        <img src="y.jpg" alt="Website 3" class="website-image">
+                    </div>
                 </a>
-            </div>
-            <div class="website-item visible">
+                <div class="website-content">
+                    <p>Content for Example Website 3 goes here. This can be any details about the website.</p>
+                </div> 
+                <!-- Website 4 -->
+            <div class="website-item">
+                <h3>Example Website 4</h3>
+                <hr>
                 <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <h3>Website 4</h3>
-                    <p>https://www.example2.com</p>
+                    <div class="website-image-container">
+                        <img src="y.jpg" alt="Website 4" class="website-image">
+                    </div>
                 </a>
+                <div class="website-content">
+                    <p>Content for Example Website 4 goes here. This can be any details about the website.</p>
+                </div>
             </div>
-            <!-- Add more website items here -->
+
+            <!-- Add more website items as needed -->
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Website Hub. All rights reserved.</p>
-        <div class="social-icons">
-            <a href="https://twitter.com" target="_blank">Twitter</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <!-- Add more social links here -->
-        </div>
+        <p>&copy; 2024 Yash Websites Hub. All rights reserved.</p>
     </footer>
 
     <button id="back-to-top" class="back-to-top">Back to Top</button>
@@ -61,3 +83,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
