--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="website-item">
                 <h3>Official youtube channel</h3>
                 <hr>
-                <a href="yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
+                <a href="https://yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
                     <div class="website-image-container">
                         <img src="y.jpg" alt="Website 1" class="website-image">
                     </div>
