--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title> Yash Websites Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Favicon.ico" type="image/x-icon"> <!-- Favicon -->
+
+    <!-- Google AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6447316615797383"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -32,45 +36,19 @@
                 </div>
             </div>
 
-            <!-- Website 2 -->
-            <div class="website-item">
-                <h3>Example Website 2</h3>
-                <hr>
-                <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <div class="website-image-container">
-                        <img src="y.jpg" alt="Website 2" class="website-image">
-                    </div>
-                </a>
-                <div class="website-content">
-                    <p>Content for Example Website 2 goes here. This can be any details about the website.</p>
-                </div>
-<!-- Website 3 -->
-            <div class="website-item">
-                <h3>Example Website 3</h3>
-                <hr>
-                <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <div class="website-image-container">
-                        <img src="y.jpg" alt="Website 3" class="website-image">
-                    </div>
-                </a>
-                <div class="website-content">
-                    <p>Content for Example Website 3 goes here. This can be any details about the website.</p>
-                </div> 
-                <!-- Website 4 -->
-            <div class="website-item">
-                <h3>Example Website 4</h3>
-                <hr>
-                <a href="https://www.example2.com" target="_blank" class="website-link">
-                    <div class="website-image-container">
-                        <img src="y.jpg" alt="Website 4" class="website-image">
-                    </div>
-                </a>
-                <div class="website-content">
-                    <p>Content for Example Website 4 goes here. This can be any details about the website.</p>
-                </div>
-            </div>
-
             <!-- Add more website items as needed -->
+        </div>
+
+        <!-- Add the ad code below or where you want the ad to appear -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-6447316615797383"
+                 data-ad-slot="XXXXXXX"  <!-- Replace with your actual ad slot -->
+                 data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
     </main>
 
@@ -83,5 +61,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
