--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Yash Websites Hub</title>
+    <title>Yash Websites Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Favicon.ico" type="image/x-icon"> <!-- Favicon -->
 
@@ -24,7 +24,7 @@
         <div class="website-links">
             <!-- Website 1 -->
             <div class="website-item">
-                <h3>Official youtube channel</h3>
+                <h3>Official YouTube Channel</h3>
                 <hr>
                 <a href="https://yashansh310710.github.io/y/y.html" target="_blank" class="website-link">
                     <div class="website-image-container">
@@ -36,19 +36,34 @@
                 </div>
             </div>
 
-            <!-- Add more website items as needed -->
-        </div>
+            <!-- Website 2 -->
+            <div class="website-item">
+                <h3>Example Website 2</h3>
+                <hr>
+                <a href="https://www.example2.com" target="_blank" class="website-link">
+                    <div class="website-image-container">
+                        <img src="y.jpg" alt="Website 2" class="website-image">
+                    </div>
+                </a>
+                <div class="website-content">
+                    <p>Content for Example Website 2 goes here. This can be any details about the website.</p>
+                </div>
+            </div>
 
-        <!-- Add the ad code below or where you want the ad to appear -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-6447316615797383"
-                 data-ad-slot="XXXXXXX"  <!-- Replace with your actual ad slot -->
-                 data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <!-- Google AdSense Ad Code -->
+            <div class="ad-container">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-6447316615797383"
+                     data-ad-slot="7626956611"  <!-- Your AdSlot ID -->
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
+            <!-- More websites can go here -->
         </div>
     </main>
 
